--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">    <link rel="stylesheet" href="assets/css/style.css">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">    <link rel="stylesheet" href="style.css">
     <title>Sito Boolean</title>
 </head>
 <body class="main">
     
     <div class="box">
-        <img class="logo" src="assets/img/logo.png" alt="">
+        <img class="logo" src="logo.png" alt="">
             <h1>Taking Booleaners from A to B</h1>
             <div class="nav" id="centro">
                 <button class="buttone">Prenota</button>
